part4/project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app
          image: REGISTRY/TODO_APP_IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
          volumeMounts:
            - name: todo-app
              mountPath: /usr/src/app/public/images
          resources:
            limits:
              cpu: '250m'
              memory: '100Mi'
            requests:
              cpu: '100m'
              memory: '40Mi'
